[package]
name = "jukebox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
atty = "0.2.14"
futures-util = "0.3.19"
mpd_client = "0.7.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = "0.1.8"
tracing-subscriber = { version = "0.3.6", features = ["env-filter", "json"] }
warp = "0.3.2"

[features]
